--- a/lab3/initial_setup/compiled_classes/scheduling.conf
+++ b/lab3/initial_setup/compiled_classes/scheduling.conf
@@ -14,3 +14,6 @@ process 30
 
 // duration of the simulation in milliseconds
 runtime 5000
+
+// maximum period of time the process can run
+quant 30
