add other configuration options

--- a/lab3/initial_setup/compiled_classes/scheduling.conf
+++ b/lab3/initial_setup/compiled_classes/scheduling.conf
@@ -2,10 +2,10 @@
 numprocess 3
 
 // mean deivation
-meandev 1100
+run_time_average 1100
 
 // standard deviation
-standdev 510
+run_time_stddev 510
 
 // process    # I/O blocking
 process 100
@@ -17,3 +17,9 @@ runtime 5000
 
 // maximum period of time the process can run
 quant 30
+
+// name for the summary file
+summary_file Summary-Results
+
+// name for the summary processes file
+log_file Summary-Processes
