--- a/Lexer/pom.xml
+++ b/Lexer/pom.xml
@@ -30,6 +30,25 @@
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
+        <plugin>
+          <groupId>de.jflex</groupId>
+          <artifactId>jflex-maven-plugin</artifactId>
+          <version>1.8.2</version>
+          <executions>
+            <execution>
+              <goals>
+                <goal>generate</goal>
+              </goals>
+              <configuration>
+                <outputDirectory>src/main/java/org/example</outputDirectory>
+                <lexDefinitions>
+                  <lexDefinition>C:/Julia/University/jflex</lexDefinition>
+                </lexDefinitions>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
