DFA basic class usage in lexer

--- a/LexerCpp/LexerCpp/LexerCpp.vcxproj.filters
+++ b/LexerCpp/LexerCpp/LexerCpp.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="Lexer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="DFA.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Token.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Lexer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DFA.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
