--- a/LexerCpp/LexerCpp/LexerCpp.vcxproj
+++ b/LexerCpp/LexerCpp/LexerCpp.vcxproj
@@ -149,10 +149,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DFA.cpp" />
     <ClCompile Include="Lexer.cpp" />
     <ClCompile Include="LexerCpp.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DFA.h" />
     <ClInclude Include="Lexer.h" />
     <ClInclude Include="Token.h" />
   </ItemGroup>
