--- a/LexerCpp/LexerCpp/LexerCpp.vcxproj.filters
+++ b/LexerCpp/LexerCpp/LexerCpp.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Trie.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Token.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Token.h">
